# codex-session-meter

./: .gitignore  AGENTS.md  README.md  install.sh  uninstall.sh
docs/: auth-research.md  data-source-research.md  troubleshooting.md
extension/: AGENTS.md  extension.js  metadata.json  prefs.js  stylesheet.css  weekly-pace.js  weekly-pace.test.js
helper/: AGENTS.md  pyproject.toml
helper/codex_session_widget/: __init__.py  auth.py  cli.py  codex_api.py  config.py  fetcher.py  formatters.py  parser.py
helper/tests/: test_auth.py  test_codex_api.py  test_config.py  test_fetcher.py  test_formatters.py  test_parser.py  test_version.py
helper/tests/fixtures/: analytics_sample.html  analytics_sample.json
