[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-widget"
version = "0.2.1"
description = "Local helper for an Ubuntu GNOME Codex session progress widget"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
codex-session-widget = "codex_session_widget.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_session_widget*"]
