[build-system]
requires = [
  "setuptools>=68",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-meter"
dynamic = ["version"]
description = "Local helper for an Ubuntu GNOME Codex weekly quota meter"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
codex-session-meter = "codex_session_widget.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_session_widget*"]

[tool.setuptools_scm]
root = ".."
version_file = "codex_session_widget/_version.py"